[package]
name = "example-wrap-stream"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.4"
futures-io = "0.3.4"
tokio = { version = "0.2.18", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
